Render helm prefix value at helm rendering time rather than twig

--- a/src/_base/harness/attributes/docker-base.yml
+++ b/src/_base/harness/attributes/docker-base.yml
@@ -32,6 +32,7 @@ attributes:
       services:
         php-base:
           environment:
+            DB_HOST: = '{{ .Values.prefix }}' ~ @('database.host')
             APP_HOST: = @('pipeline.base.hostname')
             PHP_IDE_CONFIG: = ''
     qa:
