--- a/src/_base/helm/app/templates/application/nginx/deployment.yaml
+++ b/src/_base/helm/app/templates/application/nginx/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       - env:
         {{- range $key, $value := .Values.docker.services.nginx.environment }}
         - name: {{ $key | quote }}
-          value: {{ $value | quote }}
+          value: {{ tpl $value . | quote }}
         {{- end }}
         image: {{ .Values.docker.image.nginx }}
         imagePullPolicy: Always
