--- a/src/spryker/harness/attributes/docker.yml
+++ b/src/spryker/harness/attributes/docker.yml
@@ -38,6 +38,10 @@ attributes:
       services:
         php-base:
           environment:
+            ELASTICSEARCH_HOST: = '{{ .Values.prefix }}' ~ @('elasticsearch.host')
+            REDIS_HOST: = '{{ .Values.prefix }}' ~ @('redis.host')
+            RABBITMQ_HOST: = '{{ .Values.prefix }}' ~ @('rabbitmq.host')
+            JENKINS_HOST: = '{{ .Values.prefix }}' ~ @('jenkins.host')
             RABBITMQ_EXTERNAL_HOST: = @('pipeline.preview.rabbitmq.external_host')
             JENKINS_EXTERNAL_HOST: = @('pipeline.preview.jenkins.external_host')
             SMTP_HOST: = @('pipeline.preview.smtp.host')
